<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="EventQueueCommand" Id="{4c973bde-72ef-43e2-91c0-63a894a2d489}">
    <Declaration><![CDATA[TYPE EventQueueCommand :
STRUCT
	metadata : ST_EventMetadata;
	event_text_processor	: FB_RequestEventText;
	event_details_processor	: FB_RequestEventDetails;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>